--- a/index.html
+++ b/index.html
@@ -13,8 +13,55 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <p>Hello World!!!</p>
+        <section class="main">
+            <div class="container box">
+                <form action="">
+                    <h2>Create an Account</h2>
 
+                    <div class="form-control">
+                        <label for="username">Username</label>
+                        <input
+                            type="text"
+                            id="username"
+                            placeholder="Enter Username"
+                        />
+                        <small>Error Message</small>
+                    </div>
+
+                    <div class="form-control">
+                        <label for="email">Email</label>
+                        <input
+                            type="email"
+                            id="email"
+                            placeholder="Enter Email"
+                        />
+                        <small>Error Message</small>
+                    </div>
+
+                    <div class="form-control">
+                        <label for="password">Password</label>
+                        <input
+                            type="password"
+                            id="password"
+                            placeholder="Enter Password"
+                        />
+                        <small>Error Message</small>
+                    </div>
+
+                    <div class="form-control">
+                        <label for="username">Confirm Password</label>
+                        <input
+                            type="password"
+                            id="password2"
+                            placeholder="Enter Password Again"
+                        />
+                        <small>Error Message</small>
+                    </div>
+
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+        </section>
         <!-- JAVASCRIPT LINK -->
         <script src="script.js"></script>
     </body>
