--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <section class="main">
             <div class="container box">
-                <form action="">
+                <form action="" id="form">
                     <h2>Create an Account</h2>
 
                     <div class="form-control">
